--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
     <body>
+        box
    <div class="header"header> 
 <h1> KITTIES TO GO!</h1>
 <p>Seattle's premiere drive-thru cat rentals</p>
@@ -16,7 +17,7 @@
 <div class="nav"nav></div>
 
     <a href="index.html">Home</a>
-    <a href="#About">About</a>
+    <a href="about.html">About</a>
     <a href="Rates">Rates</a>
     <a href="Liablity">Liablity Release</a>
     <a href="Book Me">Book a Cat</a>
@@ -38,12 +39,15 @@
     </section>
 </aside>
 <section> 
+    <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head.</p>
+    <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head. Hide head under blanket so no one see stares at human while pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimesswitches in french and say "miaou" just because well why not. </p>
 <p>Cats are cute, furry, and adorable pets, loved by most people. Their serious expressions, carefree attitude, and absolutely silly antics make them a favourite among people who love cats. </p>
 <p>Having lived with human beings for thousands of years, it is still sometimes unclear if we domesticated them or if they have domesticated us!</p>
 <p"quote">Please stop looking at your phone an pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww</p>
  <p"cite-quote">- Jeremy</p>
 <h2> The Kitties To Go Story</h2>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit natus, voluptatum dolor magni ullam doloribus ad minus maiores voluptatibus obcaecati consequatur ducimus possimus, tempore et quaerat. Saepe dicta ipsum officia.</p>
+<p>Fall asleep on the washing snuggles up to shoulders or knees and purrs you to sleep. Eat prawns daintily with a claw then lick paws wash down prawns with a lap carnation milk then retire to the warmest spot on the couch to claw at the before taking catnp attempt to leap between furniture but woefully miscalibrate and bellyflop onto the floor, whats your problem? I meant to do that now I shall wash myself intently cough and swat at dog.</p>
+<p> Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch to pounce upon little yam mouse, bare fangs at toy run hide in litter box until treats are fed hiss at  vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
 </section>
 
 
