--- a/index.html
+++ b/index.html
@@ -4,56 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-   <title>Kitties to Go!</title>
+    <title>Kitties to Go!</title>
 </head>
-
-    <body>
-        box
-   <div class="header"header> 
-<h1> KITTIES TO GO!</h1>
-<p>Seattle's premiere drive-thru cat rentals</p>
-</div>
-</header> 
-<div class="nav"nav></div>
-
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="Rates">Rates</a>
-    <a href="Liablity">Liablity Release</a>
-    <a href="Book Me">Book a Cat</a>
-</div>
-    </nav>
-</div>
+<body>
+    <header>
+        <div class="header"> 
+            <h1>KITTIES TO GO!</h1>
+            <p>Seattle's premiere drive-thru cat rentals</p>
+        </div>
+        <nav class="nav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="Rates.html">Rates</a>
+            <a href="Liability.html">Liability Release</a>
+            <a href="BookMe.html">Book a Cat</a>
+        </nav>
     </header> 
-<aside>
-    <section>   
-    <h3> Cats in the News</h3>
-    <p> The infamous Chewyshoes in the news again for violating his owners new Gucci loafers. Chewyshoes is know to hide under beds and in dark cloests to commit these crimes.</p>
-<a>Find out more >></a>  
-<p>Chewyshoes is also know for eating and sleeping all day with ease. The laziest cat you will ever meet.</p> 
-<a>Find out more >></a>  
-<h3> CAT OF THE WEEK</h3>
-<img src="images/sidebar-cat.jpg" alt="catbar">
-<p> Stare at the imaginary bug love blinks and purr purr purr purr.</p>
-<a>Book Now >></a>
+    <aside>
+        <section>   
+            <h3>Cats in the News</h3>
+            <p>The infamous Chewyshoes in the news again for violating his owner's new Gucci loafers. Chewyshoes is known to hide under beds and in dark closets to commit these crimes.</p>
+            <a href="#">Find out more >></a>  
+            <p>Chewyshoes is also known for eating and sleeping all day with ease. The laziest cat you will ever meet.</p> 
+            <a href="#">Find out more >></a>  
+            <h3>CAT OF THE WEEK</h3>
+            <img src="images/sidebar-cat.jpg" alt="catbar">
+            <p>Stare at the imaginary bug love blinks and purr purr purr purr.</p>
+            <a href="#">Book Now >></a>
+        </section>
+    </aside>
+    <section> 
+        <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head.</p>
+        <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head. Hide head under blanket so no one sees, stares at human while pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimes switches in French and says "miaou" just because well why not.</p>
+        <p>Cats are cute, furry, and adorable pets, loved by most people. Their serious expressions, carefree attitude, and absolutely silly antics make them a favorite among people who love cats.</p>
+        <p>Having lived with human beings for thousands of years, it is still sometimes unclear if we domesticated them or if they have domesticated us!</p>
+        <p>Please stop looking at your phone and pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww</p>
+        <p><cite>- Jeremy</cite></p>
+        <h2>The Kitties To Go Story</h2>
+        <p>Fall asleep on the washing snuggles up to shoulders or knees and purrs you to sleep. Eat prawns daintily with a claw then lick paws wash down prawns with a lap carnation milk then retire to the warmest spot on the couch to claw at the before taking catnap attempt to leap between furniture but woefully miscalibrate and bellyflop onto the floor, what's your problem? I meant to do that now I shall wash myself intently cough and swat at dog.</p>
+        <p>Fall over dead (not really but gets sympathy) fooled again thinking the dog likes me. Jump launch to pounce upon little yam mouse, bare fangs at toy run hide in litter box until treats are fed hiss at vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
     </section>
-</aside>
-<section> 
-    <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head.</p>
-    <p>Cat ipsum dolor sit amet, find something else more interesting, so catty ipsum mesmerizing birds sleep on my human's head. Hide head under blanket so no one see stares at human while pushing stuff off a table. Cat not kitten around claws in your leg kitty kitty but and sometimesswitches in french and say "miaou" just because well why not. </p>
-<p>Cats are cute, furry, and adorable pets, loved by most people. Their serious expressions, carefree attitude, and absolutely silly antics make them a favourite among people who love cats. </p>
-<p>Having lived with human beings for thousands of years, it is still sometimes unclear if we domesticated them or if they have domesticated us!</p>
-<p"quote">Please stop looking at your phone an pet me. Lounge in the doorway eat and then sleep on your face meowwww meowwww</p>
- <p"cite-quote">- Jeremy</p>
-<h2> The Kitties To Go Story</h2>
-<p>Fall asleep on the washing snuggles up to shoulders or knees and purrs you to sleep. Eat prawns daintily with a claw then lick paws wash down prawns with a lap carnation milk then retire to the warmest spot on the couch to claw at the before taking catnp attempt to leap between furniture but woefully miscalibrate and bellyflop onto the floor, whats your problem? I meant to do that now I shall wash myself intently cough and swat at dog.</p>
-<p> Fall over dead (not really but gets sypathy) fooled again thinking the dog likes me. Jump launch to pounce upon little yam mouse, bare fangs at toy run hide in litter box until treats are fed hiss at  vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
-</section>
-
-
+    <footer>
+        <img src="images/cat-logo.png" alt="Catlogo">
+        Aborpos nistro inci tet aut que volupti berupiberr to ex esseque invenienihil imaximu scideru plistiusam consequunt 
+        @2024 Kitties To Go, LLC | Seattle, WA
+    </footer>
 </body>
-<footer>
-    <img src="images/cat-logo.png" alt="Catlogo">
-    Aborpos nistro inci tet aut que volupti berupiberr to ex esseque invenienihil imaximu scideru plistiusam consequunt 
-@2024 Kitties To Go, LLC | Seattle, WA</footer>
 </html>
