--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
         <p>Fall over dead (not really but gets sympathy) fooled again thinking the dog likes me. Jump launch to pounce upon little yam mouse, bare fangs at toy run hide in litter box until treats are fed hiss at vacuum cleaner and always hungry for lie on your belly and purr when you are asleep stretch.</p>
     </section>
     <footer>
-        <img src="images/cat-logo.png" alt="Catlogo">
-        Aborpos nistro inci tet aut que volupti berupiberr to ex esseque invenienihil imaximu scideru plistiusam consequunt 
-        @2024 Kitties To Go, LLC | Seattle, WA
-    </footer>
+        <footer>
+            <img class="footer" srcset="images/cat-logo-200w.jpg 200w,
+                                         images/cat-logo-500w.jpg 500w,
+                                         images/cat-logo-800w.jpg 800w"
+                 sizes="(max-width: 600px) 200px,
+                        (max-width: 1000px) 500px,
+                        800px"
+                 src="images/cat-footer-image.jpg" alt="Catlogo">
+            <p>Aborpos nistro inci tet aut que volupti berupiberr to ex esseque invenienihil imaximu scideru plistiusam consequunt @2024 Kitties To Go, LLC | Seattle, WA</p>
+        </footer>
 </body>
 </html>
